--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -24,4 +24,5 @@
     <string name="Recap">RECAPITULATIF DU MATCH</string>
     <string name="Graph">STATISTIQUES</string>
     <string name="title_activity_maps">Maps</string>
+    <string name="settings">PARAMETRES</string>
 </resources>
