--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -25,4 +25,5 @@
     <string name="Graph">STATISTIQUES</string>
     <string name="title_activity_maps">Maps</string>
     <string name="settings">PARAMETRES</string>
+    <string name="Technique">Technique</string>
 </resources>
