--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,13 +25,14 @@
     <string name="Recap">SUMMARY OF THE MATCH</string>
     <string name="Graph">STATISTICS</string>
     <string name="title_activity_stat">Stat</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_maps">Maps</string>
     <string name="settings">SETTINGS</string>
+    <string name="critique">CRITIQUE</string>
+    <string name="Technique">Technic</string>
+    <string name="Score1">"Team 1 Score "</string>
+    <string name="Score2">Team 2 Score</string>
+    <string name="Name1">First Team</string>
+    <string name="Name2">Second Team</string>
 
 
 </resources>
