--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,7 +1,7 @@
 <resources>
+    <!-- Strings used for french app  -->
     <string name="app_name">Projet</string>
     <string name="action_settings">Paramètres</string>
-    <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">Premier Fragment</string>
     <string name="second_fragment_label">Deuxième Fragment</string>
     <string name="next">Suivant</string>
